--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@
   src: url(/src/font/Rubik.ttf);
 }
 
+@font-face {
+  font-family: "Oswald";
+  src: url(/src/font/Oswald.ttf);
+}
+
 :root {
   /* colors */
 
@@ -28,11 +33,12 @@
   --fs-550: 1.5rem;
   --fs-medium: clamp(0.875rem, 0.663vw + 0.72rem, 1.25rem);
   --fs-small: clamp(0.75rem, 1.875vw + 0.375rem, 1.125rem);
-  --fs-nav: clamp(1rem, 1.25vw + 0.5rem, 2rem);
+  --fs-nav: clamp(0.75rem, 1.326vw + 0.439rem, 1.5rem);
 
   /* font-families */
   --ff-serif: "Rubik", Helvetica, serif;
   --ff-sans-normal: "Rubik", Arial, sans-serif;
+  --ff-oswald: "Oswald";
 }
 
 *,
@@ -226,6 +232,9 @@ button {
 }
 .ff-sans-normal {
   font-family: var(--ff-sans-normal);
+}
+.ff-oswald {
+  font-family: var(--ff-oswald);
 }
 
 .letter-spacing-1 {
@@ -659,7 +668,7 @@ button {
 .about-us__article h2::after {
   content: " ";
   position: absolute;
-  width: 24rem;
+  width: 100%;
   max-width: 100%;
   height: 5px;
   bottom: 10px;
